<resources>
    <string name="app_name">MovieDB</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="theater">Theater</string>
    <string name="movies">Movies</string>
    <string name="spotlight">SpotLight</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="search">Search...</string>

</resources>
