<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_group_1">
        <item
            android:id="@+id/spot"
            android:icon="@drawable/spot"
            android:title="@string/spotlight" />
        <item
            android:id="@+id/movies"
            android:icon="@drawable/movies"
            android:title="@string/movies" />

        <item
            android:id="@+id/theater"
            android:icon="@drawable/theater"
            android:title="@string/theater" />

    </group>
    <group android:id="@+id/menu_group_2">
        <item
            android:id="@+id/menu_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/menu_about"
            android:title="@string/about" />
    </group>
</menu>